update: 데이터 증강 및 모델 성능 평가 코드 추가

--- a/test.ipynb
+++ b/test.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2730869b",
    "metadata": {},
    "outputs": [
@@ -404,18 +404,18 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1️⃣ sensor 컬럼만 추출\n",
+    "# sensor 컬럼만 추출\n",
     "sensor_cols = [c for c in df.columns if c.startswith(\"sensor_\")]\n",
     "\n",
-    "# 2️⃣ 불량 샘플 중 센서 결측 비율 계산 (길이 = 590)\n",
+    "# 불량 샘플 중 센서 결측 비율 계산 (길이 = 590)\n",
     "missing_fail = df.loc[df[\"label\"] == 1, sensor_cols].isna().mean()\n",
     "\n",
     "print(\"센서 개수:\", len(missing_fail))  # 꼭 찍어서 확인해보자 (590이면 정상)\n",
     "\n",
-    "# 3️⃣ 10x59 배열로 변환\n",
+    "# 10x59 배열로 변환\n",
     "heat_data = missing_fail.values.reshape(10, 59)\n",
     "\n",
-    "# 4️⃣ 시각화\n",
+    "# 시각화\n",
     "plt.figure(figsize=(12, 5))\n",
     "sns.heatmap(heat_data, cmap=\"Reds\", vmin=0, vmax=1, cbar_kws={\"label\": \"Missing Ratio\"})\n",
     "plt.title(\"Missing Value Distribution (Label = 1 / Fail Samples)\")\n",
