add: 이상탐지 test update

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "4f26a926",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1646,7 @@
     "            })\n",
     "    return root_causes\n",
     "\n",
-    "# 👉 테스트용 payload (일부러 Sensor_60만 비정상으로)\n",
+    "# 테스트용 payload (일부러 Sensor_60만 비정상으로)\n",
     "test_payload = {\n",
     "    \"timestamp\": \"2025-11-11T14:05:00Z\",\n",
     "    \"lot_id\": \"LOT-TEST-001\",\n",
